Adicionado a verificação se está logado ou não

--- a/teleperformance.csharp.mvc/Teleperformance/Areas/AdminArea/Views/Shared/_Layout.cshtml
+++ b/teleperformance.csharp.mvc/Teleperformance/Areas/AdminArea/Views/Shared/_Layout.cshtml
@@ -1,5 +1,10 @@
 ﻿@{
-    string userName = ((Core.Entities.Users)Session["UserLogged"]).Name;
+    string userName = "";
+
+    if (System.Web.HttpContext.Current.Session["UserLogged"] != null)
+    {
+        userName = ((Core.Entities.Users)System.Web.HttpContext.Current.Session["UserLogged"]).Name;
+    }
 }
 
 <!DOCTYPE html>
