Adicionado uma coluna usuário e implementado o botão sair do painel administrativo

--- a/teleperformance.csharp.mvc/Teleperformance/Areas/AdminArea/Views/Shared/_Layout.cshtml
+++ b/teleperformance.csharp.mvc/Teleperformance/Areas/AdminArea/Views/Shared/_Layout.cshtml
@@ -25,7 +25,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span style="color: #FFF; font-size: 15px; font-weight: bold;">Seja bem vindo @userName.ToUpper()</span>
+                <span class="row" style="color: #FFF; font-size: 15px; font-weight: bold;">Seja bem vindo @userName.ToUpper()</span>
+                <span class="row" style="color: #FFF; font-size: 15px; font-weight: bold;"><a href="/AdminArea/UserAdmin/Logoff">Sair</a></span>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
