--- a/teleperformance.csharp.mvc/Teleperformance/Views/Home/Index.cshtml
+++ b/teleperformance.csharp.mvc/Teleperformance/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                     <label for="txtPassword" style="margin-top: 10px;">
                         Senha:
                     </label>
-                    <input id="txtPassword" name="txtPassword" class="col-xs-12 form-control" placeholder="Password" />
+                    <input id="txtPassword" type="password" name="txtPassword" class="col-xs-12 form-control" placeholder="Password" />
                 </div>
 
                 <div class="col-xs-12 input-group text-center">
